--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Hello World 2025</string>
+    <string name="change_text">Change_text</string>
+    <string name="change_color">Change_color</string>
 </resources>
